# taskflow-django-application

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
apps/accounts/: admin.py  apps.py  forms.py  models.py  services.py  tests.py  tokens.py  urls.py  views.py
apps/boards/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
apps/columns/: admin.py  apps.py  forms.py  mixins.py  models.py  urls.py  views.py
apps/core/: cache_keys.py  mixins.py
apps/dashboard/: forms.py  urls.py  views.py
apps/tasks/: admin.py  apps.py  constants.py  forms.py  mixins.py  models.py  services.py  urls.py  views.py
apps/workspaces/: admin.py  forms.py  models.py  services.py  urls.py  views.py
config/: settings.py  urls.py
static/css/: app.css  auth.css  glass-ui.css  messages.css  workspaces.css
static/js/: app.js  auth.js  messages.js  space-scene.js
staticfiles/css/: app.css
templates/: base.html  dashboard.html  landing.html
templates/accounts/: accounts_base.html  activation_invalid.html  login.html  password_change.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  register.html  resend_activation_email.html  verification_sent.html
templates/boards/: archived_list.html  confirm_delete.html  create.html  detail.html  list.html  update.html
templates/columns/: archived_list.html  confirm_delete.html  create.html  update.html
templates/dashboard/: dashboard.html  profile.html  profile_update.html
templates/includes/: footer.html  header.html  icon_sprite.html  (+3 more)
(+73 files in other folders)
